--- a/scoring/main/templates/main/final.html
+++ b/scoring/main/templates/main/final.html
@@ -4,13 +4,13 @@
 </head>
 
 <style type="text/css">
-  .tg  {border-collapse:collapse;border-spacing:0;}
+  .tg  {border-color:black;border-collapse:collapse;border-spacing:0;}
   .tg td{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
     overflow:hidden;padding:10px 0px;word-break:normal;}
   .tg th{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
     font-weight:normal;overflow:hidden;padding:10px 0px;word-break:normal;}
-  .tg .tg-9wq8{border-color:inherit;text-align:center;vertical-align:middle}
-  .tg .tg-nrix{text-align:center;vertical-align:middle}
+  .tg .tg-9wq8{border-color:black;;text-align:center;vertical-align:middle}
+  .tg .tg-nrix{border-color:black;text-align:center;vertical-align:middle}
 
   .content {
   max-width: 700px;
@@ -20,7 +20,7 @@
 
 <body>
   <div class="content" id="mainContainer">
-    <h1 style="text-align: center">面试成绩汇总表</h1>
+    <h1 style="text-align: center; margin-top:2cm">面试成绩汇总表</h1>
     
       <div style="display: inline-block; width: 100%; margin-bottom: 0.5cm;">
         <div style="float: left;">
