--- a/scoring/main/templates/main/final.html
+++ b/scoring/main/templates/main/final.html
@@ -148,8 +148,15 @@
     var data = JSON.parse(result); 
     
     var total_scores = data["total_scores"];
-    var finished_examiners = data["finished_examiners"]
-    var total_scores_cell = document.getElementsByClassName("final-score");
+    var finished_examiners = data["finished_examiners"];
+    var all_examiners = [1,2,3,4,5,6,7];
+
+    for (var i = 0; i < all_examiners.length; i++){
+     var final_score_element_id = "final-score-" + all_examiners[i];
+     var elem = document.getElementById(final_score_element_id);
+     elem.innerHTML = "无";
+    }
+
     for (var i = 0; i < finished_examiners.length; i++){
      var final_score_element_id = "final-score-" + finished_examiners[i];
      var elem = document.getElementById(final_score_element_id)
