--- a/scoring/main/templates/main/index.html
+++ b/scoring/main/templates/main/index.html
@@ -26,8 +26,11 @@
 
 .content {
   max-width: 1000px;
-  margin: auto;
-  transform: scale(0.9); 
+  /* margin: auto; */
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: auto;
 }
 
 
